sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple pattern
  var: n=1
     ^AlgBubbleSort1:4: error: '=' expected but ';' found.
  getNombreValeurs
^AlgBubbleSort1:7: error: '<-' expected but '=' found.
      for (i=0 to getNombreValeurs()-1) {
            ^AlgBubbleSort1:13: error: illegal start of simple expression
    }
    ^